--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=encheres
+
+spring.messages.encoding=UTF-8
+
+spring.datasource.url=jdbc:sqlserver://localhost;databasename=ENCHERES_DB;integratedSecurity=false;encrypt=false;trustServerCertificate=false
+spring.datasource.username=SA
+spring.datasource.password=12345OHdf%e
