style: finished layout with header and footer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.messages.encoding=UTF-8
 spring.datasource.url=jdbc:sqlserver://localhost;databasename=ENCHERES_DB;integratedSecurity=false;encrypt=false;trustServerCertificate=false
 spring.datasource.username=SA
 spring.datasource.password=12345OHdf%e
+
+spring.security.user.name=test@campus-eni.fr
+spring.security.user.password=test
