feat: limité la session à 5 minutes d inactivité

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.datasource.password=Pa$$w0rd
 
 spring.security.user.name=test@campus-eni.fr
 spring.security.user.password=test
+
+server.servlet.session.timeout=5m
